# Complaint-Gram

./: .gitignore  ARCHITECTURE.md  CUSTOM_DOMAIN_SETUP.md  DEPLOYMENT.md  DOMAIN_ISSUE_ANALYSIS.md  DOMAIN_TEST_RESULTS.md  ENVIRONMENT_SETUP.md  GODADDY_DNS_FIX.md  QUICK_START_DEPLOYMENT.md  RAISEYOURVOICE_DOMAIN_SETUP.md  README.md  SNOWFLAKE_PUBLIC_DEPLOYMENT.md  SNOWFLAKE_SETUP.md  SNOWFLAKE_SIS_DEPLOYMENT.md  STREAMLIT_TROUBLESHOOTING.md  YOUR_DOMAIN_SETUP_GUIDE.md  analytics_dashboard.py  api_tweeter_details.txt.example  app.py  app_fixed.py  config.env.example  deploy.py  deploy_to_snowflake.py  packages.txt  requirements.txt  setup_custom_domain.py  simple_domain_test.py  snowflake_manager.py  snowflake_schema.sql  snowflake_setup.sql  test_domain.py  test_image_display.py  test_imports.py  test_snowflake_direct.py  test_snowflake_sis.py  test_without_ssl.py
FinalProjectPOC/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
FinalProjectPOC/demo/: Dockerfile  LIVE_DEMO_README.md  docker-compose.yml  live_demo.py  live_demo_requirements.txt  requirements.txt  run_demo.bat  run_live_demo.bat  run_live_demo.ps1  start_demo.py  test_connections.py
FinalProjectPOC/demo/config/: demo_config.yaml
FinalProjectPOC/demo/init-scripts/: 01-init-tables.sql
FinalProjectPOC/demo/src/: config_manager.py  flink_cdc_sync.py  logger_setup.py  main.py
FinalProjectPOC/docs/: configuration.md  demo-setup.md  monitoring.md  production-deployment.md  troubleshooting.md
FinalProjectPOC/production/: requirements.txt
FinalProjectPOC/production/config/: production_config.yaml
FinalProjectPOC/production/deployment/: Dockerfile  docker-compose.yml
FinalProjectPOC/production/src/: config_manager.py  main.py  (+5 more)
(+41 files in other folders)
